hphp/test/zend/good/tests/lang/035.php.skipif
<?hh
<<__EntryPoint>> function main(): void {
if (version_compare(zend_version(), "2.0.0-dev", "<")) print "skip Zend engine 2 required";
}
