hphp/test/zend/bad/ext/phar/tests/bug45218_SLOWTESTU.php.skipif
<?php
if (!extension_loaded("phar")) die("skip");
if (version_compare(PHP_VERSION, "6.0", "<")) die("skip Unicode support required");
if (getenv("SKIP_SLOW_TESTS")) die("skip slow tests excluded by request");
?>